# cppSkeleton

./: .gitignore  CMakeLists.txt  README.md
appFW/: CMakeLists.txt  consoleAppMain.hpp
buildScripts/: generateVersionCxx.py
cmakemodules/: FindHDF5.cmake  FindJsonSpirit.cmake  FindLog4cplus.cmake  FindPionNet.cmake  FindPoco.cmake  FindSoci.cmake
commonAppInit/: CMakeLists.txt  commonAppInit.cpp  commonAppInit.hpp  commonCppInit.cpp  commonCppInit.hpp
commonUtils/: CMakeLists.txt  accumulators.hpp  monoid.hpp  signalHandler.cpp  signalHandler.hpp  singleton.hpp
emptyTest/: CMakeLists.txt  fixtureTemplate.cpp  fixtureTemplate.hpp
linuxSystemLayer/: linuxSystemLayer.hpp
logging/: macros.hpp
parallel/: CMakeLists.txt  mapreduce.hpp  parallel.cpp  transform.hpp
pionCMakeLists/: CMakeLists.txt
pionCMakeLists/src/: CMakeLists.txt
profiny/: CMakeLists.txt  profiny.c  profiny.h  profiny.hpp
sampleBinaryProject/: CMakeLists.txt  main.cpp
src/main/g8/: CMakeLists.txt  README.md  default.properties
src/main/g8/$executable_name__camel$/: CMakeLists.txt  main.cpp
src/main/g8/appFW/: CMakeLists.txt  appFW.cpp  consoleAppMain.hpp
src/main/g8/buildScripts/: generateVersionCxx.py
src/main/g8/cmakemodules/: FindJsonSpirit.cmake  FindLog4cplus.cmake  FindPoco.cmake
src/main/g8/commonAppInit/: CMakeLists.txt  commonAppInit.cpp  commonAppInit.hpp
src/main/g8/commonUtils/: CMakeLists.txt  accumulators.hpp  macros.hpp  signalHandler.cpp  signalHandler.hpp
src/main/g8/docs/: AddingUnitTests.md
src/main/g8/emptyTest/: CMakeLists.txt  emptyTests.cpp  fixtureTemplate.cpp  fixtureTemplate.hpp  main.cpp
src/main/g8/logging/: CMakeLists.txt  logging.cpp
src/main/g8/profiny/: CMakeLists.txt  profiny.cpp
src/main/g8/sampleBinaryProject/: main.cpp
src/main/g8/systemLayer/: CMakeLists.txt  linuxSystemLayer.cpp  systemLayer.hpp  windowsSystemLayer.cpp
src/main/g8/versioning/: CMakeLists.txt
systemLayer/: ISystemLayer.hpp  baseSystemLayer.cpp  baseSystemLayer.hpp  linuxSystemLayer.cpp  systemLayer.hpp  windowsSystemLayer.cpp
versioning/: CMakeLists.txt
